--- a/Analysis_data/edx/Introducción a la ciencia de datos con Python.ipynb
+++ b/Analysis_data/edx/Introducción a la ciencia de datos con Python.ipynb
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -162,15 +162,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ingresa la remperatira: 36\n",
-      "96.8\n"
+      "Ingresa la remperatira: 0\n",
+      "32.0\n"
      ]
     }
    ],
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
@@ -290,9 +290,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "20.2"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "20.2"
    ]
@@ -306,9 +317,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "19.8"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "19.8"
    ]
@@ -322,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -353,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -382,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -402,7 +424,7 @@
        " 'Diciembre': 15.7}"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -431,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -452,7 +474,7 @@
        " 'Temperatura anual': 18.766666666666666}"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -537,15 +559,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Introduce la sesacion termica: 15\n",
-      "Placentero\n"
+      "Introduce la sesacion termica: 0\n",
+      "Lo sentimos pero no se encuentra registrado\n"
      ]
     },
     {
@@ -554,7 +576,7 @@
        "<function __main__.sensacion_temp()>"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -580,6 +602,8 @@
     "        print(\"Calor moderado\")\n",
     "    elif RTE > 24 and RTE < 30:\n",
     "        print(\"Calor pesado\")\n",
+    "    else:\n",
+    "        print(\"Lo sentimos pero no se encuentra registrado\")\n",
     "    return sensacion_temp\n",
     "\n",
     "#Devolvemos la entrada:\n",
@@ -597,33 +621,141 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'temp_cdmx' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32mC:\\Users\\OY0RZA~1\\AppData\\Local\\Temp/ipykernel_15736/393857379.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m#sensacion_cdmx = Varibale asignada\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[1;32mif\u001b[0m \u001b[0mtemp_cdmx\u001b[0m \u001b[1;32min\u001b[0m \u001b[0msensacion_temp\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'temp_cdmx' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Introduce la sesacion termica: 15\n",
+      "Placentero\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<function __main__.sensacion_temp()>"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Volvemos a llamar la lista \"tem_cdmx\"\n",
+    "tem_cdmx = [15.4, 18.1, 19.2, 20.2, 21.4, 20.1, 18.9, 19.8, 19.4, 19.1, 17.9, 15.7]\n",
+    "\n",
+    "#Ahora vamos a comprobar que sensacion termica aparece mas en la lista de sensacion_cdmx\n",
+    "sensacion_temp()#Primera prueba con el valor de 15.4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Introduce la sesacion termica: 18\n",
+      "Lo sentimos pero no se encuentra registrado\n",
+      "<function sensacion_temp at 0x0000026176218D30>\n",
+      "Introduce la sesacion termica: 19\n",
+      "Calor moderado\n",
+      "<function sensacion_temp at 0x0000026176218D30>\n",
+      "Introduce la sesacion termica: 20\n",
+      "Calor moderado\n",
+      "<function sensacion_temp at 0x0000026176218D30>\n",
+      "Introduce la sesacion termica: 21\n",
+      "Calor moderado\n",
+      "<function sensacion_temp at 0x0000026176218D30>\n",
+      "Introduce la sesacion termica: 20\n",
+      "Calor moderado\n",
+      "<function sensacion_temp at 0x0000026176218D30>\n",
+      "Introduce la sesacion termica: 18\n",
+      "Lo sentimos pero no se encuentra registrado\n",
+      "<function sensacion_temp at 0x0000026176218D30>\n",
+      "Introduce la sesacion termica: 19\n",
+      "Calor moderado\n",
+      "<function sensacion_temp at 0x0000026176218D30>\n",
+      "Introduce la sesacion termica: 19\n",
+      "Calor moderado\n",
+      "<function sensacion_temp at 0x0000026176218D30>\n",
+      "Introduce la sesacion termica: 19\n",
+      "Calor moderado\n",
+      "<function sensacion_temp at 0x0000026176218D30>\n",
+      "Introduce la sesacion termica: 17\n",
+      "Placentero\n",
+      "<function sensacion_temp at 0x0000026176218D30>\n",
+      "Introduce la sesacion termica: 15\n",
+      "Placentero\n",
+      "<function sensacion_temp at 0x0000026176218D30>\n"
      ]
     }
    ],
    "source": [
-    "#sensacion_cdmx = Varibale asignada\n",
+    "#Segunda prueba con el valor de 18.1\n",
+    "print(sensacion_temp())\n",
     "\n",
-    "if temp_cdmx in sensacion_temp:\n",
-    "    print(\"\")\n"
+    "#Tercera prueba con el valor 19.2\n",
+    "print(sensacion_temp())\n",
+    "\n",
+    "#Cuarta prueba con el valor 20.2 \n",
+    "print(sensacion_temp())\n",
+    "\n",
+    "#Quinta prubea con el valor 21.4\n",
+    "print(sensacion_temp())\n",
+    "\n",
+    "#Sexta prueba con el valor 20.1\n",
+    "print(sensacion_temp())\n",
+    "\n",
+    "#Septima prueba con el valor 18.9\n",
+    "print(sensacion_temp())\n",
+    "\n",
+    "#Octava prueba con el valor 19.8\n",
+    "print(sensacion_temp())\n",
+    "\n",
+    "#Novena prueba con el valor 19.4\n",
+    "print(sensacion_temp())\n",
+    "\n",
+    "#Descima prueba con el valor19.1\n",
+    "print(sensacion_temp())\n",
+    "\n",
+    "#Onsceava prueba con el valor 17.9\n",
+    "print(sensacion_temp())\n",
+    "\n",
+    "#Dosceaba prueba con el valor 15.7\n",
+    "print(sensacion_temp())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "La sensacion termica que mas se repite es:  Calor Moderado\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Asignamos variable\n",
+    "sensacion_cdmx = (\"Calor Moderado\")\n",
+    "#Comprobamos el resultado final\n",
+    "print(\"La sensacion termica que mas se repite es: \", sensacion_cdmx)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "La siguiente tabla muestra las temperaturas promedio de Bogotá, Colombia:\n",
+    "# La siguiente tabla muestra las temperaturas promedio de Bogotá, Colombia:\n",
     "\n",
     "<div class=\"header\">\n",
     "  <h3 style=\"text-align:center;\">Temperatura promedio de la Ciudad de Bogotá registrada durante el 2019</h3>\n",
@@ -695,20 +827,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[13.9, 14.5, 14.8, 14.9, 14.6, 14.4, 14, 13.8, 14.2, 13.6, 14.3, 14.2]"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "temp_bogota = [13.9,14.5,14.8,14.9,14.6,14.4,14,13.8,14.2,13.6,14.3,14.2]\n",
     "\n",
@@ -727,7 +848,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 31,
    "metadata": {
     "scrolled": true
    },
@@ -736,56 +857,101 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Introduce la sesacion termica: 19\n",
-      "Lo sentimos pero no se encuentra registrado:  19.0\n"
+      "Introduce la sesacion termica: 13\n",
+      "Placentero\n",
+      "<function sensacion_temp at 0x0000026176218D30>\n",
+      "Introduce la sesacion termica: 14\n",
+      "Placentero\n",
+      "<function sensacion_temp at 0x0000026176218D30>\n",
+      "Introduce la sesacion termica: 14\n",
+      "Placentero\n",
+      "<function sensacion_temp at 0x0000026176218D30>\n",
+      "Introduce la sesacion termica: 14\n",
+      "Placentero\n",
+      "<function sensacion_temp at 0x0000026176218D30>\n",
+      "Introduce la sesacion termica: 14\n",
+      "Placentero\n",
+      "<function sensacion_temp at 0x0000026176218D30>\n",
+      "Introduce la sesacion termica: 14\n",
+      "Placentero\n",
+      "<function sensacion_temp at 0x0000026176218D30>\n",
+      "Introduce la sesacion termica: 14\n",
+      "Placentero\n",
+      "<function sensacion_temp at 0x0000026176218D30>\n",
+      "Introduce la sesacion termica: 13\n",
+      "Placentero\n",
+      "<function sensacion_temp at 0x0000026176218D30>\n",
+      "Introduce la sesacion termica: 14\n",
+      "Placentero\n",
+      "<function sensacion_temp at 0x0000026176218D30>\n",
+      "Introduce la sesacion termica: 13\n",
+      "Placentero\n",
+      "<function sensacion_temp at 0x0000026176218D30>\n",
+      "Introduce la sesacion termica: 14\n",
+      "Placentero\n",
+      "<function sensacion_temp at 0x0000026176218D30>\n",
+      "Introduce la sesacion termica: 14\n",
+      "Placentero\n",
+      "<function sensacion_temp at 0x0000026176218D30>\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<function __main__.sensacion_temp()>"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "def sensacion_temp():\n",
-    "    RTE = float(input(\"Introduce la sesacion termica: \"))\n",
-    "    if RTE == 13.9:\n",
-    "        print(\"Enero\")\n",
-    "    elif RTE == 14.5:\n",
-    "        print(\"Febrero\")\n",
-    "    elif RTE == 14.8:\n",
-    "        print(\"Marzo\")\n",
-    "    elif RTE == 14.9:\n",
-    "        print(\"Abril\")\n",
-    "    elif RTE == 14.6:\n",
-    "        print(\"Mayo\")\n",
-    "    elif RTE == 14.4:\n",
-    "        print(\"Junio\")\n",
-    "    elif RTE == 14:\n",
-    "        print(\"Julio\")\n",
-    "    elif RTE == 13.8:\n",
-    "        print(\"Agosto\")\n",
-    "    elif RTE == 14.2:\n",
-    "        print(\"Septiembre\")\n",
-    "    elif RTE == 13.6:\n",
-    "        print(\"Octubre\")\n",
-    "    elif RTE == 14.3:\n",
-    "        print(\"Noviembre\")\n",
-    "    elif RTE == 14.2:\n",
-    "        print(\"Diciembre\")\n",
-    "    else:\n",
-    "        print(\"Lo sentimos pero no se encuentra registrado: \", RTE)\n",
-    "    return sensacion_temp\n",
+    "#Primera prueba con el valor 13.9\n",
+    "print(sensacion_temp())\n",
+    "#Segunda prueba con el valor de 14.5\n",
+    "print(sensacion_temp())\n",
     "\n",
-    "#14.3, 14.2]\n",
+    "#Tercera prueba con el valor 14.8\n",
+    "print(sensacion_temp())\n",
     "\n",
-    "#Devolvemos la entrada:\n",
-    "sensacion_temp()"
+    "#Cuarta prueba con el valor 14.9\n",
+    "print(sensacion_temp())\n",
+    "\n",
+    "#Quinta prubea con el valor 14.6\n",
+    "print(sensacion_temp())\n",
+    "\n",
+    "#Sexta prueba con el valor 14.4\n",
+    "print(sensacion_temp())\n",
+    "\n",
+    "#Septima prueba con el valor 14\n",
+    "print(sensacion_temp())\n",
+    "\n",
+    "#Octava prueba con el valor 13.8\n",
+    "print(sensacion_temp())\n",
+    "\n",
+    "#Novena prueba con el valor 14.2\n",
+    "print(sensacion_temp())\n",
+    "\n",
+    "#Descima prueba con el valor 13.6\n",
+    "print(sensacion_temp())\n",
+    "\n",
+    "#Onsceava prueba con el valor 14.3\n",
+    "print(sensacion_temp())\n",
+    "\n",
+    "#Dosceaba prueba con el valor  14.2\n",
+    "print(sensacion_temp())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "La sensacion termica que mas se repite es:  Placentero\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Guardamos el resultado\n",
+    "sensacion_bogota = (\"Placentero\")\n",
+    "\n",
+    "#Devolvemos la sensacion termica que mas aparece en al lista\n",
+    "print(\"La sensacion termica que mas se repite es: \", sensacion_bogota)"
    ]
   },
   {
