--- a/Analysis_data/edx/Analisis a List of countries by percentage of population living in poverty.ipynb
+++ b/Analysis_data/edx/Analisis a List of countries by percentage of population living in poverty.ipynb
@@ -445,27 +445,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "       Country $1.90 $3.20 $5.50  Year      Continent\n",
-      "0      Albania   1.3   8.2  33.8  2017         Europe\n",
-      "1      Algeria   0.4   3.7  28.6  2011         Africa\n",
-      "2       Angola  49.9  72.0  89.3  2018         Africa\n",
-      "3    Argentina   1.5   5.0  14.0  2019  South America\n",
-      "4      Armenia   1.1  10.0  44.0  2019           Asia\n",
-      "..         ...   ...   ...   ...   ...            ...\n",
-      "159  Venezuela   6.7  14.0  33.0  2006  South America\n",
-      "160    Vietnam   1.8   7.0  22.0  2018           Asia\n",
-      "161      Yemen  18.3  51.0  81.6  2014           Asia\n",
-      "162     Zambia  58.7  75.0  88.0  2015         Africa\n",
-      "163   Zimbabwe  39.5  64.0  83.0  2019         Africa\n",
+      "      Country     $1.90  $3.20  $5.50  Year      Continent\n",
+      "0     Albania       1.3    8.2   33.8  2017         Europe\n",
+      "1     Algeria       0.4    3.7   28.6  2011         Africa\n",
+      "2      Angola      49.9   72.0   89.3  2018         Africa\n",
+      "3   Argentina       1.5    5.0   14.0  2019  South America\n",
+      "4     Armenia       1.1   10.0   44.0  2019           Asia\n",
+      "..        ...       ...    ...    ...   ...            ...\n",
+      "59      Haiti      24.5   50.8   78.9  2012  North America\n",
+      "60   Honduras      14.8   29.0   49.0  2019  North America\n",
+      "61    Hungary       0.2    0.6    2.0  2018         Europe\n",
+      "62    Iceland       0.0    0.0    0.2  2017         Europe\n",
+      "63      India  10.6[11]   45.2   79.5  2017           Asia\n",
       "\n",
-      "[164 rows x 6 columns]\n"
+      "[64 rows x 6 columns]\n"
      ]
     }
    ],
@@ -474,16 +474,70 @@
     "df.rename(columns={'< $1.90[8][1]': '$1.90','< $3.20[6]': '$3.20', '< $5.50[7]':'$5.50'}, inplace=True)\n",
     "\n",
     "#Imprimimos el resultado de la transformacion de las columnas\n",
-    "print(df)"
+    "print(df.head(64))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Country       object\n",
+       "$1.90         string\n",
+       "$3.20        float64\n",
+       "$5.50        float64\n",
+       "Year           int64\n",
+       "Continent     object\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.iloc(['2':'63'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df['$1.90'] = df['$1.90'].convert_dtypes(float)"
+    "df['$1.90'] = df['$1.90'].convert_dtypes(float)\n",
+    "df.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "Unable to parse string \"10.6[11]\" at position 63",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\pandas\\_libs\\lib.pyx\u001b[0m in \u001b[0;36mpandas._libs.lib.maybe_convert_numeric\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;31mValueError\u001b[0m: Unable to parse string \"10.6[11]\"",
+      "\nDuring handling of the above exception, another exception occurred:\n",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_7604/3630565339.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mdf\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'$1.90'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mto_numeric\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'$1.90'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdowncast\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m\"float\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\pandas\\core\\tools\\numeric.py\u001b[0m in \u001b[0;36mto_numeric\u001b[1;34m(arg, errors, downcast)\u001b[0m\n\u001b[0;32m    181\u001b[0m         \u001b[0mcoerce_numeric\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0merrors\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[1;32min\u001b[0m \u001b[1;33m(\u001b[0m\u001b[1;34m\"ignore\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"raise\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    182\u001b[0m         \u001b[1;32mtry\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 183\u001b[1;33m             values, _ = lib.maybe_convert_numeric(\n\u001b[0m\u001b[0;32m    184\u001b[0m                 \u001b[0mvalues\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mset\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcoerce_numeric\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mcoerce_numeric\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    185\u001b[0m             )\n",
+      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\pandas\\_libs\\lib.pyx\u001b[0m in \u001b[0;36mpandas._libs.lib.maybe_convert_numeric\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;31mValueError\u001b[0m: Unable to parse string \"10.6[11]\" at position 63"
+     ]
+    }
+   ],
+   "source": [
+    "df['$1.90'] = pd.to_numeric(df['$1.90'], downcast=\"float\")"
    ]
   },
   {
