--- a/Office_Rentals/Office_Rentals/notebooks/Visualizacion_data.ipynb
+++ b/Office_Rentals/Office_Rentals/notebooks/Visualizacion_data.ipynb
@@ -6,6 +6,18 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Iniciamos las primeras Visualizaciones de nuestra exploracion"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
