--- a/Office_Rentals/Office_Rentals/notebooks/data_mercadolibre.ipynb
+++ b/Office_Rentals/Office_Rentals/notebooks/data_mercadolibre.ipynb
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +136,7 @@
     }
    ],
    "source": [
-    "print(soup.price)"
+    "print(soup.div.price)"
    ]
   },
   {
