--- a/Office_Rentals/Office_Rentals/notebooks/Scraping_icasa_data.ipynb
+++ b/Office_Rentals/Office_Rentals/notebooks/Scraping_icasa_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "e1a94ecf",
+   "id": "33905d7d",
    "metadata": {},
    "source": [
     "# Importamos las libreriras necesarias para hacer el scraping"
@@ -10,8 +10,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "92fd68ce",
+   "execution_count": 1,
+   "id": "6aedbf08",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "497b8f70",
+   "id": "89e0e765",
    "metadata": {},
    "source": [
     "## Ahora empezamos hacer el Scraping\n",
@@ -42,8 +42,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "7c3d848e",
+   "execution_count": 2,
+   "id": "dcebd884",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5f1d6e99",
+   "id": "0ee1aa66",
    "metadata": {},
    "source": [
     "### Empezamos la extracion de los datos"
@@ -61,8 +61,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "e75825ca",
+   "execution_count": 6,
+   "id": "76e4dd5d",
    "metadata": {},
    "outputs": [
     {
@@ -77,8 +77,8 @@
     "page = requests.get('https://www.icasas.mx/renta/comerciales-oficinas-guerrero-acapulco-juarez-3_14_12_0_366_0')\n",
     "soup = BeautifulSoup(page.text, 'html.parser')\n",
     "\n",
-    "#Empezamos hacer la limpieza de etiquetas html\n",
-    "div_data = soup.find_all('div', class_=\"data\")\n",
+    "#Empezamos hacer la limpieza de etiquetas html ###ad-data\n",
+    "div_data = soup.find_all('div', class_=\"ad-data\")\n",
     "for div in div_data:\n",
     "    price = div.find(class_='price').text\n",
     "    title = div.find(class_='title').text\n",
@@ -94,24 +94,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "63a400ca",
+   "execution_count": 5,
+   "id": "c9ab1261",
    "metadata": {},
    "outputs": [
     {
      "ename": "NameError",
-     "evalue": "name 'w' is not defined",
+     "evalue": "name 'r' is not defined",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_14212/4002479812.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'data_icasa.csv'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mw\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mf\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m     \u001b[0md\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcsv\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwrite\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mf\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m     \u001b[0md\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwriterows\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdatos\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'w' is not defined"
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_10184/2593837691.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'data_icasa.csv'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mr\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mf\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m     \u001b[0md\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcsv\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwrite\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mf\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m     \u001b[0md\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwriterows\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdatos\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'r' is not defined"
      ]
     }
    ],
    "source": [
-    "with open('data_icasa.csv', w) as f:\n",
+    "with open('data_icasa.csv', r) as f:\n",
     "    d = csv.write(f)\n",
     "    d.writerows(datos())"
    ]
@@ -119,7 +119,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f4133550",
+   "id": "aae3b5e5",
    "metadata": {},
    "outputs": [],
    "source": []
